@@ -8,6 +8,7 @@ Version 6.0.0
 - Fixed _waitms and _waitus timing
 - Fixed type of `_clkmode` on P2 (it was byte instead of long)
 - Fixed compilation error on some signed multiplies
+- Fixed calling varargs functions from Spin in bytecode
 - Implemented _muldiv64 for bytecode
 - Made Spin2 loop behaviour match that of other languages (like PNut v38)
 - Optimized nucode
